--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 }
 
 body {
-    background-image: url("/images/bg-desktop.svg");
+    background-image: url("./images/bg-desktop.svg");
     background-position: cover;
     background-repeat: no-repeat;
     background-color: var(--primaryColor);
